Fix attendees overflow

--- a/nosvc/core/static/stylesheets/screen.scss
+++ b/nosvc/core/static/stylesheets/screen.scss
@@ -222,6 +222,7 @@ body {
 .attendees {
   display: block;
   list-style: none;
+  overflow: hidden;
 
   li {
     @include float-left;
